docs/apache-airflow-providers-microsoft-azure/3.6.0/_sources/_api/airflow/providers/microsoft/azure/transfers/local_to_wasb/index.rst.txt
:py:mod:`airflow.providers.microsoft.azure.transfers.local_to_wasb`
===================================================================

.. py:module:: airflow.providers.microsoft.azure.transfers.local_to_wasb


Module Contents
---------------

Classes
~~~~~~~

.. autoapisummary::

   airflow.providers.microsoft.azure.transfers.local_to_wasb.LocalFilesystemToWasbOperator




.. py:class:: LocalFilesystemToWasbOperator(*, file_path, container_name, blob_name, wasb_conn_id = 'wasb_default', load_options = None, **kwargs)

   Bases: :py:obj:`airflow.models.BaseOperator`

   Uploads a file to Azure Blob Storage.

   :param file_path: Path to the file to load. (templated)
   :param container_name: Name of the container. (templated)
   :param blob_name: Name of the blob. (templated)
   :param wasb_conn_id: Reference to the wasb connection.
   :param load_options: Optional keyword arguments that
       `WasbHook.load_file()` takes.

   .. py:attribute:: template_fields
      :annotation: :Sequence[str] = ['file_path', 'container_name', 'blob_name']

      

   .. py:method:: execute(self, context)

      Upload a file to Azure Blob Storage.



